@@ -1,14 +1,7 @@
-## -*- Mode: CPerl -*-
-my ($last_test,$loaded);
+##-*- Mode: CPerl -*-
+use Test::More tests=>3;
 
-######################### We start with some black magic to print on failure.
-use lib '../blib/lib','../blib/arch';
-
-BEGIN { $last_test = 1; $| = 1; print "1..$last_test\n"; }
-END   { print "not ok 1  Can't load module\n" unless $loaded; }
-
-use DiaColloDB;
-$loaded = 1;
-print "ok 1\n";
-
-######################### End of black magic.
+BEGIN {
+    use_ok('DiaColloDB');
+    use_ok('DiaColloDB::Upgrade');
+}
